--- a/study2/analysis/1_cleaning.qmd
+++ b/study2/analysis/1_cleaning.qmd
@@ -41,12 +41,7 @@ The initial sample consisted of `r report::report_participants(df, age="Age", se
 
 Due to a mistake in the study's implementation, some of the feedback was incorrect, e.g., "Some faces were attractive" and "AI-generated faces were less attractive" rather than "Some images were arousing" and "AI-generated images were less arousing". 
 
-
-```{r}
-
-table(df$version)
-  
-```  
+`r sum(df$version=="old")` participants had the old version of the feedback and `r sum(df$version=="new")` had the newer version.
 
 ### Proportion
 
