--- a/study2/analysis/2_emotion.qmd
+++ b/study2/analysis/2_emotion.qmd
@@ -27,7 +27,6 @@ options(mc.cores = parallel::detectCores(),
         width = 300)
 ```
 
-**notes**: How about confidence on all AI and all photos.
 
 ```{r}
 #| warning: false
@@ -39,18 +38,19 @@ df <- read.csv("../data/data.csv") |>
     select(dfsub, Participant, Mobile, starts_with(c("Feedback_","BAIT")), COPS_Frequency, SexualActivity,- Feedback_Text),
     by = "Participant"
     ) |> 
+    datawizard::rescale(select= c("Arousal", "Enticing", "Valence"), range=c(0, 6), to=c(0,1)) |> 
+  datawizard::rescale(select= c("Realness"), range=c(-3,3), to=c(0,1)) |>
   mutate(Condition = case_when(
     Condition == "Fiction" ~ "AI-Generated",
-    Condition == "Reality
-    " ~ "Photograph"
+    Condition == "Reality" ~ "Photograph"
   )) |>
   mutate(Condition = fct_relevel(Condition, "Photograph", "AI-Generated"),
          Gender =  fct_relevel(Gender, "Male", "Female"),
          PornFrequency = as.numeric(as.factor(COPS_Frequency)),
          SexualActivity_num = as.numeric(as.factor(SexualActivity)),
          ConditionBelief = case_when(
-           Condition == "Photograph" & Realness > 0 ~ "True",
-           Condition == "AI-Generated" & Realness < 0 ~ "True",
+           Condition == "Photograph" & Realness > 0.5 ~ "True",
+           Condition == "AI-Generated" & Realness < 0.5 ~ "True",
            .default = "False",
          )) |>
   rename(AllRealConfidence = "Feedback_AllRealConfidence",
@@ -72,13 +72,6 @@ results_table <- function(model, effects="fixed", filter=NULL) {
   }
 }
 
-## re-scaled variables
-scale_values <- function(x){(x-min(x))/(max(x)-min(x))}
-
-
-df$Arousal <- scale_values(df$Arousal)
-df$Enticing <- scale_values(df$Enticing)
-df$Valence <- scale_values(df$Valence)
 ```
 
 **Note**: [These calculations are based on the validation of the BAIT scale](https://realitybending.github.io/FictionEro/study1/analysis/1_cleaning.html)
@@ -97,27 +90,33 @@ df$BAIT_Positive <- (df$BAIT_Exciting + df$BAIT_Benefit)/2
 ```
 
 
-## Manipulation Check
+## Visualisation of Key Variables
 
 This section is about selecting the best model. Notably, all the stimuli presented are of an erotic nature.
 Note that variables were rescaled to [0,1] when fitting the models and that the stimuli presented to participants was assigned according to their self-rated sexuality, making all stimuli relevant to participants. 
 
-To summarise, women rate stimuli on average significantly lower in arousal, enticiment and valence than men. 
+To summarise, **women** rate stimuli on average **significantly lower** in arousal, enticiment and valence than **men**. 
 
 ::: panel-tabset
 
 ### Arousal
 
-Arousal ratings were relatively well-distributed across the scale, with the highest frequency for "Not at all" and a gradual decrease across higher ratings. 
+In general, males exhibited greater variability in their arousal ratings, while females tended to provide more lower arousal ratings.
 
-The pattern of arousal ratings was similar regardless of whether participants believed the images were AI-generated or real. Among male participants, arousal ratings were relatively evenly distributed but tended to cluster around the middle of the scale, independent of their belief about the images' origin. Female participants, on the other hand, showed a pronounced peak at the lowest arousal rating, irrespective of their perception of the images as AI-generated. Participants with other gender identities provided fewer responses overall, but their arousal ratings generally leaned toward moderate levels, particularly in the "Not Believed" condition.
+The pattern of arousal ratings for images that participants believed to be either AI-generated or photos (i.e., initially labeled as photos and later rated as photos, or initially labeled as AI and later rated as AI), as well as for images where participants disagreed with the original labels, was generally similar across genders.
+
 
 ```{r}
 arousal <- df |> 
-  ggplot(aes(x=Arousal)) +
-  geom_bar(fill="#03A9F4") +
+  ggplot(aes(x=Arousal, fill = Gender)) +
+  geom_bar() +
   scale_y_sqrt(expand = c(0, 0)) +
+  scale_x_continuous(
+    breaks = c(0, 1),
+    labels = c("Not at all","Very much")) +
   labs(title = "Arousal", ) +
+  facet_wrap(~Gender) +
+   scale_fill_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +
   theme_abyss() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 
@@ -133,16 +132,17 @@ df |>
     ConditionBelief == "True" ~ "Believed",)) |>
   ggplot(aes(x=Arousal, fill=Gender)) +
   geom_bar(position = "identity") +
+   scale_x_continuous(
+    breaks = c(0, 1),
+    labels = c("Not at all","Very much")) +
   facet_grid(Gender~ConditionBelief, scales="free_y") +
   scale_color_manual(values=c("red", "white"), guide="none") +
-  scale_fill_manual(values=c("Female"="#E91E63", "Male"="#FF9800"), guide="none") +
+  scale_fill_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +
   # scale_y_sqrt(expand = c(0, 0)) +
-  labs(title = "Arousal to images believed or not to be AI-Gnerated") +
+  labs(title = "Arousal Ratings for Images Based on Belief in Original Labels") +
   theme_abyss() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 ```
-
-**Note**:  Model m3, which includes random intercepts and random slopes for Gender at the stimulus level, exhibits relatively high correlations between the random intercepts and slopes. This suggests that the random effects are strongly correlated, which could indicate overfitting.
 
 ```{r}
 #| eval: false
@@ -154,9 +154,9 @@ m3 <- glmmTMB::glmmTMB(Arousal ~ Gender + (1|Participant) + (1+Gender|Stimulus )
 
 
 test_bf(m1,m2, m3)
-compare_performance(m1, m2)
+compare_performance(m1, m2, m3)
 
-# the model with participants only as random effecs seems to be the best
+# Model m3, which includes random intercepts for Participants and both random intercepts and slopes for Gender at the Stimulus level, seems to be the best
 ```
 
 This model evaluate ths the effects of Gender on Arousal, accounting for random variability due to participants (i.e., random effects). The analysis revealed that on average **women rate erotic stimuli significantly lower in arousal than men**. 
@@ -184,19 +184,26 @@ estimate_relation(m_a) |>
 
 ### Enticement
 
-Enticement ratings were relatively well-distributed across the scale.
+In general, males tended to rate images higher in enticement more often than females. 
 
-Male participants predominantly provided responses in the mid-to-high enticement range across both conditions. Female participants showed a pronounced peak at the lowest enticement rating when they did not believe the image was AI-generated, with a similar but less pronounced pattern in the believed condition. Participants identifying as 'Other' responses were more concentrated around the middle of the scale.
+Enticing ratings for images where participants believed in the original labels, as well as for those where they disagreed with the labels, were similar for males. 
+
+For females, although a similar pattern was observed, they tended to provide more lower enticement ratings, particularly for images where they believed in the original labels.
+
 
 ```{r}
 enticiment <- df |> 
-  ggplot(aes(x=Enticing)) +
-  geom_bar(fill="#03A9F4") +
+  ggplot(aes(x=Enticing, fill = Gender)) +
+  geom_bar() +
   scale_y_sqrt(expand = c(0, 0)) +
+  scale_x_continuous(
+    breaks = c(0, 1),
+    labels = c("Not at all","Very much")) +
   labs(title = "Enticement", ) +
+  facet_wrap(~Gender) +
+   scale_fill_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +
   theme_abyss() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
-
 
 enticiment
 ```
@@ -210,11 +217,13 @@ df |>
     ConditionBelief == "True" ~ "Believed",)) |>
   ggplot(aes(x=Enticing, fill=Gender)) +
   geom_bar(position = "identity", binwidth = 0.5) +
+  scale_x_continuous(
+    breaks = c(0, 1),
+    labels = c("Not at all","Very much")) +
   facet_grid(Gender~ConditionBelief, scales="free_y") +
-  scale_color_manual(values=c("red", "white"), guide="none") +
   scale_fill_manual(values=c("Female"="#E91E63", "Male"="#FF9800"), guide="none") +
   # scale_y_sqrt(expand = c(0, 0)) +
-  labs(title = "Enticiment to images believed or not to be AI-Gnerated") +
+  labs(title = "Enticement Ratings for Images Based on Belief in Original Labels") +
   theme_abyss() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 ```
@@ -239,24 +248,27 @@ results_table(m_e)
 estimate_relation(m_e) |> 
   ggplot(aes(x=Gender, y=Predicted)) +
   geom_pointrange(aes(ymin=CI_low, ymax=CI_high, color = Gender), position=position_dodge(width=0.5)) +
- scale_color_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +  labs(y="Arousal") +
+ scale_color_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +  labs(y="Enticement") +
   theme_abyss()
 ```
 
-
 ### Valence
 
-Valence ratings were concetrated more around the mid-to-high valence. 
+In general, males tended to assign higher valence ratings to images more frequently. Females, on the other hand, showed higher frequencies of ratings in the middle and lower ranges of the valence scale.
 
-Participants showed the same pattern of results regardless of whether they believed the images to be Ai-generated or not. 
-Males tended to to have the majority of their responses concentrated in the mid-to-high valence range. Female majoity valence ratings were on on the lower (0) and midle end of the scale (3/4). 
+The pattern of valence ratings for images, whether believed or not believed, was similar for both genders, with ratings for believed images closely resembling those for non-believed images.
 
 ```{r}
 valence <- df |> 
-  ggplot(aes(x=Valence)) +
-  geom_bar(fill="#03A9F4") +
+  ggplot(aes(x=Valence, fill = Gender)) +
+  geom_bar() +
   scale_y_sqrt(expand = c(0, 0)) +
+   scale_x_continuous(
+    breaks = c(0, 1),
+    labels = c("Not at all","Very much")) +
+  scale_fill_manual(values=c("Female"="#E91E63", "Male"="#FF9800"), guide="none") +
   labs(title = "Valence", ) +
+    facet_wrap(~Gender) +
   theme_abyss() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 
@@ -273,18 +285,15 @@ df |>
   ggplot(aes(x=Valence, fill=Gender)) +
   geom_bar(position = "identity", binwidth = 0.5) +
   facet_grid(Gender~ConditionBelief, scales="free_y") +
-  scale_color_manual(values=c("red", "white"), guide="none") +
   scale_fill_manual(values=c("Female"="#E91E63", "Male"="#FF9800"), guide="none") +
   # scale_y_sqrt(expand = c(0, 0)) +
-  labs(title = "Valence to images believed or not to be AI-Gnerated") +
+  labs(title = "Valence to Ratings for Images Based on Belief in Original Labels") +
   theme_abyss() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 ```
 
 
 This model evaluate ths the effects of Gender on valence, accounting for random variability due to participants and the stimuli (i.e., random effects). Notably, all the stimuli is erotic. 
-
-<!-- Key Findings -->
 
 The analysis revealed that on average **women rate erotic stimuli significantly lower in valence than men**. 
 
@@ -304,7 +313,7 @@ results_table(m_v)
 estimate_relation(m_v) |> 
   ggplot(aes(x=Gender, y=Predicted)) +
   geom_pointrange(aes(ymin=CI_low, ymax=CI_high, color = Gender), position=position_dodge(width=0.5)) +
- scale_color_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +  labs(y="Arousal") +
+ scale_color_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +  labs(y="Valence") +
   theme_abyss()
 ```
 
@@ -410,7 +419,7 @@ m_arousal <- glmmTMB::glmmTMB(Arousal ~ Gender/ Condition +
 results_table(m_arousal)
 
 marginaleffects::avg_slopes(m_arousal, variables="Condition", by="Gender") 
-#   results_table()
+# > results_table()
 
 ```
 
@@ -418,7 +427,7 @@ marginaleffects::avg_slopes(m_arousal, variables="Condition", by="Gender")
 
 This model explores whether various factors such as **attitudes towards AI, knowledge about AI, frequency of porn consumption, and sexual activity** moderate the relationship between gender, image relevance (specifically AI-generated versus photographs), and arousal ratings.
 
-The analysis revealed a significant interaction effect only for **positive attitudes towards AI** among females. Specifically, females with higher positive attitudes towards AI rated AI-generated images as more arousing, relative to when they viewed photographs 
+The analysis revealed a significant interaction effect only for **positive attitudes towards AI** among females. Specifically, females with higher positive attitudes towards AI rated AI-generated images as more arousing, relative to when they viewed images labelled as photographs. 
 
 No other moderators showed statistically significant effects on arousal across the interactions of gender, condition (Ai-generated vs Photograph), and the respective moderators.
 
@@ -484,6 +493,7 @@ display(feedback_results)
 ```
 
 ```{r}
+
 m <- glmmTMB::glmmTMB(Arousal ~ Gender / (Condition * SexualActivity_num) + (Condition | Participant) + (1|Stimulus),
                       data=filter(df, ConditionBelief == "True"), 
                       family=glmmTMB::ordbeta(),
@@ -545,7 +555,7 @@ enticement_desc
 
 ### Whole Sample
 
-This model examines how Gender and Condition influence enticement ratings, treating participant and items as random intercepts.
+This model examines how **Gender and Condition influence enticement** ratings, treating participant and items as random intercepts.
 
 <!-- Key Findings: -->
 
@@ -554,8 +564,6 @@ There was a significant interaction between gender and image condition, whereby 
 We also analyzed the average marginal effect of the variable “Condition” (comparing AI-Generated to Photograph) separately for males and females.
 
 For males, enticement ratings are significantly lower on average for AI-Generated images compared to Photograph images. For females, enticement ratings are slightly lower on average for AI-Generated images compared to Photograph images, although this difference is not statistically significant.
-
-**Note**. 'Other' was removed due to the very small percentage of individuals identifying as such. 
 
 ```{r}
 m_enticement <- glmmTMB::glmmTMB(Enticing ~ Gender / Condition + 
@@ -573,7 +581,7 @@ marginaleffects::avg_slopes(m_enticement, variables="Condition", by="Gender", re
 We examined whether **attitudes towards AI, porn frequency, and sexual activity** moderated the relationship between the predictors (sex, relevance, condition) and enticement ratings. The results showed that enticing ratings for images labeled AI-generated were moderated by the feedback reporting attitudes towards AI, but this was only significant for women. Specifically, women who reported having more positive attitudes towards AI, rated these images higher in arousal compared to images labeled as photographs.
 
 
-Looking at **feedback as a moderator**, the results showed that enticement ratings for images labelled as AI-Generated were moderated by the feedback that AI is less Attractive for males, and that difference between the AI-Generated images and real photos is obvious for females. 
+Looking at **feedback as a moderator**, the results showed that enticement ratings for images labelled as AI-Generated were moderated by the feedback that AI is less attractive for males, and that difference between the AI-Generated images and real photos is obvious for females. 
 
 Lastly, the interaction between sexual activity and condition on enticement, suggests that enticement ratings do not significantly differ with sexual activity levels for either gender. 
 
@@ -645,7 +653,7 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
            
            "Feedback_DiffObvious", "Feedback_DiffNone",
            "Feedback_AIMoreArousing", "Feedback_AILessArousing",
-           "Feedback_AIMoreAttractive", "Feedback_LessArousing",
+           "Feedback_AIMoreAttractive", "Feedback_AILessArousing",
            "Feedback_LabelsIncorrect", "Feedback_LabelsReversed")) {
   moderator_believed <- rbind(moderator_believed,
                              test_moderator(filter(df, ConditionBelief == "True"), "Enticing", m))
@@ -666,7 +674,7 @@ valence_desc
 
 ### Whole Sample
 
-This model examines the effect of Gender and Condition on Valence ratings, while accounting for random variability due to participants and items (i.e., random intercepts).
+This model examines the effect of **Gender and Condition on Valence** ratings, while accounting for random variability due to participants and items (i.e., random intercepts).
 
 <!-- The intercept is Male and photograph.  -->
 Male participants rated images labelled as AI-Generated significantly lower in valence than Real images. For females, there is no significant effect.
@@ -733,18 +741,19 @@ results_table(m)
 ```
 
 ```{r}
-for(m in c("Feedback_DiffObvious", "Feedback_DiffNone","Feedback_DiffSubtle", 
+moderator_believed <- data.frame()
+for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
+           "BAIT_Positive", "BAIT_Negative", "PornFrequency", "SexualActivity", 
            
+           "Feedback_DiffObvious", "Feedback_DiffNone",
            "Feedback_AIMoreArousing", "Feedback_AILessArousing",
-           "Feedback_AIMoreAttractive", "Feedback_LessArousing",
-           
-           "Feedback_LabelsIncorrect", "Feedback_LabelsReversed",
-           "Feedback_AllReal", "Feedback_AllFake")) {
+           "Feedback_AIMoreAttractive", "Feedback_AILessArousing",
+           "Feedback_LabelsIncorrect", "Feedback_LabelsReversed")) {
   moderator_believed <- rbind(moderator_believed,
                              test_moderator(filter(df, ConditionBelief == "True"), "Valence", m))
 }
 
-display(filter(moderator_believed, p < .1))
+(filter(moderator_believed, p < .1))
 ```
 
 ## Emotionality (combined factor)
@@ -757,15 +766,15 @@ pca
 ```
 
 ```{r}
-df$Emotionality <- normalize(predict(pca)$PC1)
+df$Emotionality <- as.numeric(normalize(predict(pca)$PC1))
 
 emotionality <- df |> 
   mutate(Emotionality_Extreme = ifelse(Emotionality %in% c(0, 1), "Extreme", "Not extreme")) |>
   ggplot(aes(x=Emotionality, fill = Gender)) +
-  geom_histogram(aes(color=Emotionality_Extreme), position = "identity", bins=80) +
+  geom_histogram(aes(color=Emotionality_Extreme), position = "identity", bins=20) +
   facet_grid(~Gender, scales="free_y") +
   scale_color_manual(values=c("red", "white"), guide="none") +
-  scale_fill_manual(values=c("Female"="#48c9b0", "Male"="#FF9800"), guide="none") +
+  scale_fill_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +
   scale_y_sqrt(expand = c(0, 0)) +
   labs(title = "Emotionality") +
   theme_abyss() +
@@ -781,12 +790,12 @@ emotionality_desc
 
 ### Whole Sample
 
-This model looks at the effect of gender and condition on emotionality, accounting for random variability due to participants and items (i.e., random intercepts).
+This model looks at the effect of **Gender and Condition on Emotionality**, accounting for random variability due to participants and items (i.e., random intercepts).
 
 The results show that females consistently rate photographs as higher in emotionality compared to males. Additonally, males rate AI-Generated images higher in emotionality compared to photographs. 
 
 ```{r}
-m <- glmmTMB::glmmTMB(Emotionality ~ Gender /Condition + (1| Participant) + (1|Stimulus),
+m <- glmmTMB::glmmTMB(Emotionality ~ Gender / Condition + (1| Participant) + (1|Stimulus),
                       data=df, family=glmmTMB::ordbeta(),
                       control = glmmTMB::glmmTMBControl(parallel = 8))
 
@@ -801,7 +810,9 @@ marginaleffects::avg_slopes(m, variables="Condition", by="Gender", re.form=NA)
 
 Looking at **AI-attitudes, porn frequency and sexual activity**, and feedback as moderators, we can see that for females, emotionality ratings for AI-generated images are negatively moderated by positive attitudes towards AI, meaning that females with more positive AI attitudes rate the images as less emotional. For males, emotionality ratings are positively moderated by negative attitudes towards AI, meaning that males with more negative AI attitudes rate the images as more emotional.
 
-Looking at **feedback** as a moderator, the results show that for males, emotionality ratings for AI-Generated images were negatively moderated by the feedback that AI images were more attractive.  
+Looking at **feedback** as a moderator,  the results show that emotionality ratings for AI-generated images were significantly moderated only by positive attitudes toward AI in females and negative attitudes toward AI in males.
+
+Interestingly, for females, higher positive attitudes (BAIT Positive) were associated with lower emotionality ratings of AI-generated images. For males, higher negative attitudes (BAIT Negative) were associated with higher emotionality ratings.
 
 
 ```{r}
@@ -847,22 +858,44 @@ results_table(m)
 ```
 
 ```{r}
-for(m in c("Feedback_DiffObvious", "Feedback_DiffNone","Feedback_DiffSubtle", 
+moderator_believed <- data.frame()
+for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
+           "BAIT_Positive", "BAIT_Negative", "PornFrequency", "SexualActivity", 
            
+           "Feedback_DiffObvious", "Feedback_DiffNone",
            "Feedback_AIMoreArousing", "Feedback_AILessArousing",
-           "Feedback_AIMoreAttractive", "Feedback_LessArousing",
-           
-           "Feedback_LabelsIncorrect", "Feedback_LabelsReversed",
-           "Feedback_AllReal", "Feedback_AllFake")) {
+           "Feedback_AIMoreAttractive", "Feedback_AILessArousing",
+           "Feedback_LabelsIncorrect", "Feedback_LabelsReversed")) {
   moderator_believed <- rbind(moderator_believed,
                              test_moderator(filter(df, ConditionBelief == "True"), "Emotionality", m))
 }
 
-display(filter(moderator_believed, p < .1))
+(filter(moderator_believed, p < .1))
 ```
 
 ## Summary
 
-- 
+**Gender Differences**
+- Women rate stimuli on average significantly lower in arousal, enticiment and valence than men, however this difference was not significant for valence.
+
+-Males rated AI-generated images significantly lower than photographs in arousal, valence, and enticement. Females showed no significant difference in ratings between AI-generated and photographic images across all outcomes.
+
+**Moderators**
+- For women, **positive attitudes towards AI** moderated arousal, enticement, and valence ratings, resulting in **more favorable evaluations of AI-generated images**. Negative attitudes moderated valence ratings, leading to less favorable evaluations.
+
+- For men, negative attitudes towards AI moderated only enticement ratings, with more negative views leading to less enticing ratings of AI-generated images.
+
+- Men’s **perceptions of the attractiveness of AI-generated images** moderated both arousal and enticement ratings. More attractive AI images were rated as more arousing and enticing, while less attractive AI images were rated as less arousing.
+
+- Women’s feedback about the differences between AI and real images being obvious moderated both enticement and valence ratings, with AI-generated images rated as less enticing and less valent. 
+
 
 ## Figures
+
+
+## Notes/ Questions
+
+1. 'Other' was removed due to the very small percentage of individuals identifying as such.
+2. 'Porn' factor was not computed, instead sexual activity and frequency of watching porn were treated seperate. 
+
+
