--- a/study2/analysis/3_realness.qmd
+++ b/study2/analysis/3_realness.qmd
@@ -11,3 +11,352 @@ format:
 execute: 
   cache: true
 ---
+## Data Preparation
+
+```{r}
+#| message: false
+#| warning: false
+
+library(tidyverse)
+library(easystats)
+library(patchwork)
+library(ggside)
+library(glmmTMB)
+
+options(mc.cores = parallel::detectCores(),
+        brms.backend = "cmdstanr",
+        width = 300)
+```
+
+```{r}
+
+dfsub <- read.csv("../data/data_participants.csv")
+
+df <- read.csv("../data/data.csv") |> 
+  right_join(
+    select(dfsub, Participant, Mobile, starts_with(c("Feedback_", "BAIT_")), COPS_Frequency, SexualActivity,-Feedback_Text),
+    by = "Participant"
+    ) |> 
+  datawizard::rescale(select= c("Arousal", "Enticing", "Valence"), range=c(0, 6), to=c(0,1)) |> 
+  datawizard::rescale(select= c("Realness"), range=c(-3,3), to=c(0,1)) |>
+  mutate(Condition = case_when(
+    Condition == "Fiction" ~ "AI-Generated",
+    Condition == "Reality" ~ "Photograph"
+  )) |>
+  mutate(Condition = fct_relevel(Condition, "Photograph", "AI-Generated"),
+         Gender =  fct_relevel(Gender, "Male", "Female"),
+         PornFrequency = as.numeric(as.factor(COPS_Frequency)),
+         SexualActivity_num = as.numeric(as.factor(SexualActivity)),
+         ConditionBelief = case_when(
+           Condition == "Photograph" & Realness > 0.5 ~ "True",
+           Condition == "AI-Generated" & Realness < 0.5 ~ "True",
+           .default = "False"),
+         RealnessBelief = ifelse(Realness > 0.5, 1, 0)) |>
+  rename(AllRealConfidence = "Feedback_AllRealConfidence",
+         AllFakeConfidence = "Feedback_AllFakeConfidence",
+         Enjoyment = "Feedback_Enjoyment"
+         )|>
+  mutate(across(starts_with("Feedback_"), as.factor))
+
+results_table <- function(model, effects="fixed", filter=NULL) {
+  if("marginaleffects" %in% class(model)) {
+    model |> 
+      parameters::parameters() |> 
+      as.data.frame() |> 
+      select(-Parameter, -SE, -S, z=Statistic, -Predicted) |> 
+      insight::format_table() |> 
+      parameters::display()
+  } else {
+    display(parameters::parameters(model, effects=effects, keep=filter))
+  }
+}
+
+```
+
+**Note**: [These calculations are based on the validation of the BAIT scale](https://realitybending.github.io/FictionEro/study1/analysis/1_cleaning.html)
+
+```{r}
+
+df$BAIT_Videos <- (df$BAIT_VideosRealistic + (1 - df$BAIT_VideosIssues)) / 2
+
+df$BAIT_Visual = (df$BAIT_ImagesRealistic + (1 - df$BAIT_ImagesIssues) + df$BAIT_ImitatingReality + df$BAIT_EnvironmentReal) / 4
+
+df$BAIT_Text = (df$BAIT_TextRealistic + (1 - df$BAIT_TextIssues)) / 2
+
+df$BAIT_Negative <- (df$BAIT_Worry + df$BAIT_Dangerous)/2
+
+df$BAIT_Positive <- (df$BAIT_Exciting + df$BAIT_Benefit)/2
+```
+
+### Distribution
+
+The Realness variable captures a distribution of responses ranging from extreme values (0 and 1) to more ambivalent ratings in between. Given the bounded an ordered beta regression model was employed, as recommended for such data structures [(Kubinec, 2022)](https://doi.org/10.1017/pan.2022.20).
+
+Notably, participants’ confidence in their judgments varied depending on whether they believed the image label (e.g., "AI-generated" or "Photograph"). When the label was believed, participants tended to give more extreme realness ratings, suggesting greater confidence in their evaluations. In contrast, non-belief in the label was associated with a higher frequency of intermediate responses, indicating more uncertainty or ambivalence in perceived realness.
+
+```{r}
+#| warning: false
+
+df |> 
+  mutate(ConditionBelief = as.factor(ConditionBelief)) |> 
+  mutate(ConditionBelief = case_when(
+    ConditionBelief == "False" ~ "Not Believed",
+    ConditionBelief == "True" ~ "Believed",)) |>
+  mutate(Realness_Extreme = ifelse(Realness %in% c(0, 1), "Extreme", "Not extreme")) |>
+  ggplot(aes(x=Realness, fill = Gender)) +
+  geom_histogram(aes(color=Realness_Extreme), position = "identity", bins=15) +
+  facet_grid(Gender ~ ConditionBelief, scales="free_y") +
+  scale_color_manual(values=c("red", "white"), guide="none") +
+  scale_fill_manual(values=c("Female"="#FF9800", "Male"="#03A9F4"), guide="none") +
+  scale_y_sqrt(expand = c(0, 0)) +
+  labs(title = "Realness") +
+  theme_abyss() +
+  theme(plot.title = element_text(hjust = 0.5, face="bold"))
+```
+
+## Physical Characteristics
+
+Here, we are examining the effect of various physical characteristics of the images to evaluate whether they influence the perceived realness of the images. Neither Entropy, Complexity, Contrast, nor Luminance significantly influence the perceived realness of the images, nor the likelihood of realness being above 0.5 ("RealnessBelief"), as indicated by the lack of significant effects. 
+
+
+```{r}
+#| warning: false
+
+make_model <- function(f, family=glmmTMB::ordbeta()) {
+  m <- glmmTMB::glmmTMB(as.formula(f), 
+                        data=df, 
+                        family=family,
+                        control = glmmTMB::glmmTMBControl(parallel = 8))
+  print(results_table(m))
+  m
+}
+
+m <- make_model("Realness ~ Entropy + (1|Participant) + (1|Stimulus)", family=glmmTMB::ordbeta())
+m <- make_model("RealnessBelief ~ Entropy + (1|Participant) + (1|Stimulus)", family="binomial")
+m <- make_model("Realness ~ Complexity + (1|Participant) + (1|Stimulus)", family=glmmTMB::ordbeta())
+m <- make_model("RealnessBelief ~ Complexity + (1|Participant) + (1|Stimulus)", family="binomial")
+m <- make_model("Realness ~ Contrast + (1|Participant) + (1|Stimulus)", family=glmmTMB::ordbeta())
+m <- make_model("RealnessBelief ~ Contrast + (1|Participant) + (1|Stimulus)", family="binomial")
+m <- make_model("Realness ~ Luminance + (1|Participant) + (1|Stimulus)", family=glmmTMB::ordbeta())
+m <- make_model("RealnessBelief ~ Luminance + (1|Participant) + (1|Stimulus)", family="binomial")
+```
+
+## Manipulation Check
+
+This model examines the influence gender and condition on ratings of realness, incorporating random intercepts for participants and items.
+
+<!-- Intercept: Male and Photograph -->
+
+For males the realness ratings were lower for images labelled AI-Generated compared to real photographs. For females they also rated images labelled as AI-Generated as less Real, altough this effect was not significant. 
+
+```{r}
+#| warning: false
+
+m <- make_model("Realness ~ Gender / Condition + 
+                (1|Participant) + (1|Stimulus)",
+                family=glmmTMB::ordbeta())
+
+predbeta <- estimate_relation(m, length=20)
+
+m <- make_model("RealnessBelief ~ Gender / Condition + 
+                (1|Participant) + (1|Stimulus)",
+                family="binomial")
+
+predbin <- estimate_relation(m, length=20)
+
+predbeta |> 
+  ggplot(aes(x=Condition, y=Predicted)) +
+  geom_pointrange(aes(ymin=CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.2)) +
+  scale_color_manual(values=c("red", "blue"), guide="none") +
+  facet_grid(~Gender)
+```
+
+## Moderators
+
+Here we look at whether the findings above are moderated by **AI-Generated, Porn frequency and sexual activity or feedback**
+
+### AI-Attitudes
+
+This model looks at whether realness ratings are moderated by attitudes towards AI. 
+
+Looking at the results, the influence of Gender and Condition on Realness scores was not moderated by attidues towards AI.
+
+```{r}
+#| warning: false
+
+test_moderator <- function(df, moderator="BAIT_Visual") {
+  f <- paste0("Realness ~ Gender / (Condition * ", moderator, ") + (1| Participant) + (1|Stimulus)")
+  r <- glmmTMB::glmmTMB(as.formula(f),
+                      data=df, 
+                      family=glmmTMB::ordbeta(),
+                      control = glmmTMB::glmmTMBControl(parallel = 8)) |>
+    parameters::parameters() |> 
+    as.data.frame() |> 
+    select(-df_error, -Effects, -Group, -Component, -SE)
+  r$Moderator <- moderator
+  insight::format_table(filter(r, str_detect(Parameter, moderator)))
+}
+
+
+moderator <- data.frame()
+for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
+           "BAIT_Positive", "BAIT_Negative")) {
+  moderator <- rbind(moderator, test_moderator(df, m))
+}
+
+display(filter(moderator, p < .05))
+```
+
+### Porn + Sexual Activity
+
+This model evaluates how ratings of realness, predicted by Gender and Condition, are moderated by participants' report of how often they engaged in sexual activity and how often they view pornography. 
+
+Looking at porn frequency and sexual activity, the influence of Gender and Condition on Realness scores was not moderated by these variables.
+
+```{r}
+#| warning: false
+
+moderator <- data.frame()
+for(m in c("PornFrequency", "SexualActivity_num")) {
+  moderator <- rbind(moderator, test_moderator(df, m))
+}
+
+display(filter(moderator, p < .05))
+```
+
+### Feedback
+
+This model evaluates how ratings of realness, predicted by sex, condition, and relevance, are moderated by participants' feedback.
+
+For males, the feedback that AI-generated images were less arousing significantly moderated realness ratings for images labeled as AI-generated, with higher realness ratings for those images when participants thought they were less arousing.
+
+For males, the belief that all images were real significantly increased realness ratings for all images, regardless of their actual content.
+
+For females, the belief that no faces were attractive significantly increased realness ratings for the images, suggesting that lower attractiveness perceptions made the images seem more real.
+
+```{r}
+#| warning: false
+
+moderator <- data.frame()
+for(m in c("Feedback_DiffObvious", "Feedback_DiffNone",
+           "Feedback_AIMoreArousing", "Feedback_AILessArousing", 
+           "Feedback_NoFacesAttractive", "Feedback_SomeFacesAttractive", 
+           "Feedback_LabelsIncorrect", "Feedback_LabelsReversed",
+           "Feedback_AllReal",
+           "Feedback_AllFake")) {
+  moderator <- rbind(moderator, test_moderator(df, m))
+}
+
+display(filter(moderator, p < .05))
+```
+
+
+```{r}
+#| warning: false
+
+m2 <- glmmTMB::glmmTMB(Realness ~ Gender /
+                         (Feedback_AILessArousing / Condition) + 
+                        (1 | Participant) + (1|Stimulus),
+                      data=df, 
+                      family=glmmTMB::ordbeta(),
+                      control = glmmTMB::glmmTMBControl(parallel = 8))
+
+summary(m2)
+
+# stars1 <- data.frame(Gender = as.factor("Male"),
+#                      Condition = "AI-Generated",
+#                      label = "***",
+#                      x = 1.5, 
+#                      y = 0.55)
+# 
+
+pred1 <- estimate_relation(m2)
+
+p1 <- pred1 |> 
+  ggplot(aes(x=Feedback_AILessArousing, y=Predicted)) +
+  geom_line(aes(color=Condition, group=Condition), linewidth=.3, position = position_dodge(width=0.2), key_glyph = "path") +
+  geom_pointrange(aes(ymin=CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.2), size=0.8, linewidth=1, key_glyph = "blank") +
+  # geom_text(data=stars2, aes(x=x, y=y, label=label, color=Condition), hjust=0.5, key_glyph = "blank", size=3) +
+  # geom_text(data=stars1, aes(x=x, y=y, label=label), hjust=0.5, color="#424242", size=3) +
+  guides(color=guide_legend(override.aes = list(linewidth = 1.5))) +
+  facet_grid(~Gender) +
+  scale_y_continuous(labels=scales::percent) +
+  scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  theme_minimal() +
+  theme(axis.text.y = element_text(size = 8),
+        strip.placement = "outside",
+        strip.background.x = element_rect(fill=c("lightgrey"), color=NA),
+        strip.text.x = element_text(size = 10),
+        strip.text.y = element_text(size = 10),
+        axis.text.x = element_text(size=9, color="black"),
+        legend.text = element_text(size = 10)) +
+  labs(y="Realness\n", fill="Images presented as:", color="Images presented as:",
+       x = "\n'AI-Images were less arousing' Feedback",
+       tag = "B")
+
+p1
+
+```
+
+
+```{r}
+#| warning: false
+
+m2 <- glmmTMB::glmmTMB(Realness ~ Gender /
+                         (Feedback_NoFacesAttractive / Condition) + 
+                        (1 | Participant) + (1|Stimulus),
+                      data=df, 
+                      family=glmmTMB::ordbeta(),
+                      control = glmmTMB::glmmTMBControl(parallel = 8))
+
+summary(m2)
+
+# stars2 <- data.frame(
+#   Gender = as.factor("Male"),
+#   Condition = "AI-Generated",
+#   label = "***",
+#   x = 1.5,
+#   y = 0.5)
+
+pred2 <- estimate_relation(m2)
+
+p2 <- pred2 |> 
+  ggplot(aes(x=Feedback_NoFacesAttractive, y=Predicted)) +
+  geom_line(aes(color=Condition, group=Condition), linewidth=.3, position = position_dodge(width=0.2), key_glyph = "path") +
+  geom_pointrange(aes(ymin=CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.2), size=0.8, linewidth=1, key_glyph = "blank") +
+  # geom_text(data=stars2, aes(x=x, y=y, label=label, color=Condition), hjust=0.5, key_glyph = "blank", size=3) +
+  # geom_text(data=stars2, aes(x=x, y=y, label=label), hjust=0.5, color="#424242", size=3) +
+  guides(color=guide_legend(override.aes = list(linewidth = 1.5))) +
+  facet_grid(~Gender) +
+  scale_y_continuous(labels=scales::percent) +
+  scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  theme_minimal() +
+  theme(axis.text.y = element_text(size = 8),
+        strip.placement = "outside",
+        strip.background.x = element_rect(fill=c("lightgrey"), color=NA),
+        strip.text.x = element_text(size = 10),
+        strip.text.y = element_text(size = 10),
+        axis.text.x = element_text(size=9, color="black"),
+        legend.text = element_text(size = 10)) +
+  labs(y="Realness\n", fill="Images presented as:", color="Images presented as:",
+       x = "\n'AI-Faces were less attractive' Feedback",
+       tag = "B")
+
+p2
+```
+
+
+## Summary
+
+- For males the realness ratings were lower for images labelled AI-Generated compared to real photographs. For females they also rated images labelled as AI-Generated as less Real, altough this effect was not significant. 
+- Looking at moderators, attitudes towards AI, participants reports of how often they engaged in sexual activity and how often they view pornography, did not moderate realness ratings
+- Looking at the feedback as a moderator for realness ratings, for males, feedback that AI-generated images were less arousing increased realness ratings for those images, and believing all images were real raised realness ratings across all images. For females, the belief that no faces were attractive raised realness ratings for the images.
+
+
+## Figures
+
+## Notes/ Questions
+
+1. 'Other' was removed due to the very small percentage of individuals identifying as such.
+2. 'Porn' factor was not computed, instead sexual activity and frequency of watching porn were treated seperate. 
+3. Missing significance starts on figures. 
